Feat(api): add rest api to add/update bots
